// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`setup-component > fixtures > tests/fixtures/basic.setup.tsx 1`] = `
"// basic.setup.js
import { defineComponent, createVNode } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "basic.setup",
	props: { foo: {
		type: String,
		required: true
	} },
	setup(__props, { expose: __expose }) {
		__expose();
		defineRender(() => {
			// @ts-ignore
			return createVNode("div", null, null);
		});
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var basic_setup = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { basic_setup as default };
"
`;

exports[`setup-component > fixtures > tests/fixtures/with-define-options.setup.tsx 1`] = `
"// with-define-options.setup.js
import { defineComponent, createVNode } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	...{ name: "App" },
	__name: "with-define-options.setup",
	setup(__props, { expose: __expose }) {
		__expose();
		defineRender(() => {
			return createVNode("div", null, null);
		});
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var withDefineOptions_setup = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { withDefineOptions_setup as default };
"
`;
